@@ -1,5 +1,10 @@
 2018-04-01  Chung-Ju Wu  <jasonwucj@gmail.com>
 
+	* config/nds32/nds32.h (FUNCTION_PROFILER): Output newline character.
+	(PROFILE_HOOK): Define its implementation.
+
+2018-04-01  Chung-Ju Wu  <jasonwucj@gmail.com>
+
 	* config/nds32/nds32.h (WCHAR_TYPE, WCHAR_TYPE_SIZE): Use unsigned int
 	type and 32-bit size.
 
